# shadey

./: Cargo.toml  README.md
shader/: default.wgsl  graphing.wgsl  mandelbrot.wgsl  shader.wgsl  shader2.wgsl  std.wgsl  testing.wgsl  voronoi.wgsl  what.wgsl
src/: app.rs  autogen_ui.rs  default.wgsl  main.rs  parser.rs  shader.rs  shader.wgsl  std.wgsl  texture.rs  ui.rs  wgsl.rs
