[package]
name = "shadey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12.0"
winit = "0.26.0"
env_logger = "0.9.0"
log = "0.4.14"
pollster = "0.2.4"
image = "0.23.14"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
futures = { version="0.3.19", features = [ "thread-pool" ] }
nom = "7.1.1"
notify = "4.0.17"

# GUI
egui = "0.15.0"
egui_wgpu_backend = "0.15.0"
egui_winit_platform = "0.12.0"
rfd = "0.6.1"
