[package]
name = "shadey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16.2"
winit = "0.28.6"
env_logger = "0.10.0"
log = "0.4.19"
pollster = "0.3.0"
image = "0.24.6"
bytemuck = { version = "1.13.1", features = [ "derive" ] }
futures = { version = "0.3.28", features = [ "thread-pool" ] }
nom = "7.1.3"
notify-debouncer-full = { version = "*", default-features = false }

# GUI
egui = "0.22.0"
egui_wgpu_backend = "0.24.0"
egui_winit_platform = "0.19.0"
rfd = "0.11.4"
